add description entity